--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "myConnectionString": "Data Source=BHUMI;Initial Catalog=Reclaim_The_Art;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+    "myConnectionString": "Data Source=BHUMI;Initial Catalog=Reclaim_The_Art2;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
